[package]
name = "rssg"
version = "1.7.3"
edition = "2021"

license = "MIT"
authors = ["Kyllingene"]
description = "A rusty static-site generator leveraging shell commands."
categories = ["command-line-utilities", "template-engine"]
keywords = ["ssg", "static-site", "website"]

homepage = "https://github.com/kyllingene/rssg"
repository = "https://github.com/kyllingene/rssg"

[dependencies]
fancy-regex = "0.11"
serde = "1.0"
toml = "0.8.0"
serde_yaml = "0.9"
yaml-front-matter = "0.1.0"
sarge = "4.0.2"
fern = "0.6.2"
log = "0.4.17"
sha2 = "0.10.6"
